new proj/src/objects/GE_HQ_Channel_Relationship__c.object
<CustomObject>
    <description>Define the relationship that we have with Channel customers</description>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Relationships</relationshipLabel>
        <relationshipName>Channel_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Channel_Relationship_Type__c</fullName>
        <label>Channel Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier_1__c</fullName>
        <label>Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier_2__c</fullName>
        <label>Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier_3__c</fullName>
        <label>Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Channel Relationship</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Channel Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>